fix: footer will align correctly at bottom when content is less

--- a/css/footer.css
+++ b/css/footer.css
@@ -4,6 +4,7 @@ footer {
 
 .copyright {
     font-size: 16px;
+    line-height: 16px;
     padding: 20px 0px;
     text-align: center;
     color: grey;
