--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@
 .content {
     margin-top: 50px;
     padding: 30px 0;
+    min-height: calc(
+        100vh - 106px
+    ); /* 106 = header height (50px) + footer height (56px) */
 }
 
 .photo-container {
